services/demo-v111/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v111
  labels:
    name: demo-v111
    app: demo-v111
