services/demo-v111/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v111-service
  namespace: demo-v111
  labels:
    app: demo-v111
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: demo-v111
